# Rtype

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  installLinux.sh  installMac.sh  rfc1000.txt  rfc9999.txt
.github/: pull_request_template.md
.github/workflows/: check-clang-format.yml  check-commit-messages-pr.yaml  check-commit-messages.yaml  check-cpp-lint-format.yaml  main.yml  test-and-build.yml
Client/: .leaderboard.txt  CMakeLists.txt  Makefile  clean.sh  conanfile.txt
Client/Protocol/: UdpClient.cpp  UdpClient.hpp  mainClient.cpp
Client/assets/files/: settings.txt
Client/inc/: GameState.hpp  MainState.hpp  PlayState.hpp  SettingsState.hpp
Client/src/: EventQueue.cpp  EventQueue.hpp  GameState.cpp  MainState.cpp  PlayState.cpp  Player.cpp  Player.h  Player.hpp  SettingsState.cpp  main.cpp
Client/src/Action/: Action.cpp  Action.hpp  ChadAction.cpp  ChadAction.hpp  CollisionAction.cpp  CollisionAction.hpp  CreateAction.cpp  CreateAction.hpp  CreateLobbyAction.cpp  CreateLobbyAction.hpp  CreateSuccessfullAction.cpp  CreateSuccessfullAction.hpp  DamageAction.cpp  DamageAction.hpp  DestroyAction.cpp  DestroyAction.hpp  IAction.cpp  IAction.hpp  IncreaseAction.cpp  IncreaseAction.hpp  JoinLobbyAction.cpp  JoinLobbyAction.hpp  JoinSuccessfullAction.cpp  JoinSuccessfullAction.hpp  LeaderboardAction.cpp  LeaderboardAction.hpp  LeaveLobbyAction.cpp  LeaveLobbyAction.hpp  MovementAction.cpp  MovementAction.hpp  PosAction.cpp  PosAction.hpp  ShootAction.cpp  ShootAction.hpp  StateAction.cpp  StateAction.hpp  VoidAction.cpp  VoidAction.hpp
Client/src/InputManager/: InputManager.cpp  InputManager.hpp
Client/src/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DisplaySystem.cpp  DisplaySystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RandomEnemyGeneratorSystem.cpp  RandomEnemyGeneratorSystem.hpp  ShootingSystem.cpp  ShootingSystem.hpp
Client/src/gameEngine/inc/: Button.hpp  Core.hpp  GameState.hpp  MainState.hpp  Menu.hpp  PlayState.hpp  Settings.hpp  Sprite.hpp  State.hpp
Client/src/gameEngine/src/: Button.cpp  Core.cpp  MainState.cpp  Menu.cpp  PlayState.cpp  Settings.cpp  State.cpp  StateMachine.cpp
Client/tmp/: Menu.hpp
Documentation/fundamentals/: controls.md  getting-started.md
Documentation/game-engine/: ecs.md  state-machine.md  systems.md
Documentation/overview/: client.md  game-engine.md  libraries.md  protocol.md  server.md
Documentation/systems/: animationsystem.md  collisionsystem.md  createobjectsystem.md  createplayersystem.md  damagesystem.md  destroysystem.md  displaysystem.md  guisystem.md  movementsystem.md  powerupsystem.md  randomenemygeneratorsystem.md  shootingsystem.md  soundsystem.md
Documentation/technical-documentation/: code-guidlines.md  commit-policy.md  linter-and-formatter.md
ECS/: ComponentPool.hpp  DataTypesECS.hpp  ECS.hpp  EntityManager.hpp  EntityViewer.hpp  ISystem.hpp
Game/: EventQueue.cpp  EventQueue.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Timer.cpp  Timer.hpp
Game/CreateEntities/: AssetLoader.cpp  AssetLoader.hpp  Init.cpp  Init.hpp
Game/CreateEntities/levels/: level1.json  level2.json  level3.json
Game/ECS/: ComponentPool.hpp  DataTypesECS.hpp  ECS.hpp  EntityManager.hpp  ISystem.hpp
Game/Encapsulation/: Event.hpp  GraphicDataTypes.hpp  IFont.hpp  IGraphic.hpp  IGraphicLoader.hpp  IMouse.hpp  IMusic.hpp  IRectangleShape.hpp  IRenderWindow.hpp  ISounds.hpp  ISprite.hpp  IText.hpp  ITexture.hpp
Game/Encapsulation/Networking/: IIoService.hpp  NetworkDataTypes.hpp
Game/Encapsulation/SFML/: Font.cpp  Font.hpp  GraphicLoader.cpp  GraphicLoader.hpp  Mouse.cpp  Mouse.hpp  Music.cpp  Music.hpp  RectangleShape.cpp  RectangleShape.hpp  RenderWindow.cpp  RenderWindow.hpp  SFMLWindow.cpp  SFMLWindow.hpp  Sounds.cpp  Sounds.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
Game/Encapsulation/raylib/: RaylibFont.cpp  RaylibFont.hpp  RaylibGraphicLoader.cpp  RaylibGraphicLoader.hpp  RaylibMouse.cpp  RaylibMouse.hpp  RaylibMusic.cpp  RaylibMusic.hpp  RaylibRectangleShape.cpp  RaylibRectangleShape.hpp  RaylibSound.cpp  RaylibSound.hpp  RaylibSprite.cpp  RaylibSprite.hpp  RaylibText.cpp  RaylibText.hpp  RaylibTexture.cpp  RaylibTexture.hpp  RaylibWindow.cpp  RaylibWindow.hpp
Game/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CreateObjectSystem.cpp  CreateObjectSystem.hpp  CreatePlayerSystem.cpp  CreatePlayerSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  DestroySystem.cpp  DestroySystem.hpp  DisplaySystem.cpp  DisplaySystem.hpp  GUISystem.cpp  GUISystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PowerUpSystem.cpp  PowerUpSystem.hpp  RandomEnemyGeneratorSystem.cpp  RandomEnemyGeneratorSystem.hpp  ShootingSystem.cpp  ShootingSystem.hpp  SoundSystem.cpp  SoundSystem.hpp
GameEngine/inc/: Button.hpp  Core.hpp  MusicPlayer.hpp  Sprite.hpp  State.hpp  StateMachine.hpp
GameEngine/src/: Button.cpp  Button.hpp  Core.cpp  Core.hpp  MusicPlayer.cpp  MusicPlayer.hpp  Sprite.cpp  Sprite.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Textbox.cpp  Textbox.hpp
GameEngine/src/States/: CharSelectState.cpp  CharSelectState.hpp  CreateLobbyState.cpp  CreateLobbyState.hpp  IntroState.cpp  IntroState.hpp  JoinLobbyState.cpp  JoinLobbyState.hpp  LeaderboardState.cpp  LeaderboardState.hpp  LobbyState.cpp  LobbyState.hpp  MainState.cpp  MainState.hpp  ProvideUserNameState.cpp  (+3 more)
Protocol/: BinarySerialization.cpp  BinarySerialization.hpp  ClientTest.cpp  GetAction.cpp  IProtocol.cpp  IProtocol.hpp  ServerTest.cpp  Tcp.hpp  Udp.cpp  Udp.hpp  UdpClient.cpp  UdpClient.hpp  UdpServer.cpp  UdpServer.hpp  UdpSession.cpp  UdpSession.hpp  main.cpp  mainClient.cpp  mainServer.cpp
Server/: .gitignore  CMakeLists.txt  clean.sh  main.cpp
Server/Protocol/: UdpServer.cpp  UdpServer.hpp  UdpSession.cpp  UdpSession.hpp  mainServer.cpp
Server/src/: Logger.cpp  Logger.hpp  ServerChadFilter.cpp  ServerChadFilter.hpp
Server/src/Data/: compliments.txt  insults.txt
(+8 files in other folders)
